--- a/scss/_l-search.scss
+++ b/scss/_l-search.scss
@@ -1,5 +1,13 @@
 .search {
-  padding: 24px 0;
+  padding: 24px 37px;
+
+  @include tablet {
+    padding: 24px 34px;
+  }
+
+  @include mobile {
+    padding: 24px 20px;
+  }
 
   &__bar {
     display: flex;
